# LocalFisherDiscriminantAnalysis

./: CMakeLists.txt  LICENSE  binding.cpp  binding.h  lfda.cpp  lfda.h  metrics.cpp  metrics.h  readme.md
python_lib_install/: readme.md
python_test/: lfda_test.py  readme.md
